--- a/TestApplication/LiveChartsTest.csproj
+++ b/TestApplication/LiveChartsTest.csproj
@@ -44,17 +44,19 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AsyncErrorHandler.Fody" Version="1.3.0" />
-    <PackageReference Include="Avalonia" Version="0.10.15" />
-    <PackageReference Include="Avalonia.Desktop" Version="0.10.15" />
+    <PackageReference Include="Avalonia" Version="11.0.0-preview5" />
+    <PackageReference Include="Avalonia.Desktop" Version="11.0.0-preview5" />
     <!--Condition below is needed to remove Avalonia.DiagnostTestLiveCharts package from build output in Release configuration.-->
-    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.15" />
-    <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.15" />
-    <PackageReference Include="LiveChartsCore" Version="2.0.0-beta.300" />
-    <PackageReference Include="LiveChartsCore.SkiaSharpView" Version="2.0.0-beta.300" />
-    <PackageReference Include="LiveChartsCore.SkiaSharpView.Avalonia" Version="2.0.0-beta.300" />
-    <PackageReference Include="ReactiveUI" Version="18.1.8" />
-    <PackageReference Include="ReactiveUI.Fody" Version="18.1.8" />
-    <PackageReference Include="Splat.Autofac" Version="14.2.8" />
+    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.0-preview5" />
+    <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.0-preview5" />
+    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.0-preview5" />
+    <PackageReference Include="LiveChartsCore" Version="2.0.0-beta.701" />
+    <PackageReference Include="LiveChartsCore.SkiaSharpView" Version="2.0.0-beta.701" />
+    <PackageReference Include="LiveChartsCore.SkiaSharpView.Avalonia" Version="2.0.0-beta.700-11.0.0-preview5" />
+    <PackageReference Include="PropertyChanged.Fody" Version="4.1.0" />
+    <PackageReference Include="ReactiveUI" Version="18.4.26" />
+    <PackageReference Include="ReactiveUI.Fody" Version="18.4.26" />
+    <PackageReference Include="Splat.Autofac" Version="14.6.8" />
   </ItemGroup>
   <ItemGroup>
 	  <Compile Update="**\*.xaml.cs">
@@ -71,6 +73,9 @@
 	  </Compile>
 	  <Compile Update="Views\DataCollectionView.axaml.cs">
 	    <DependentUpon>DataCollectionView.axaml</DependentUpon>
+	  </Compile>
+	  <Compile Update="Views\FpgaChartView.axaml.cs">
+	    <DependentUpon>FpgaChartView.axaml</DependentUpon>
 	  </Compile>
   </ItemGroup>
 </Project>
