--- a/TestApplication/LiveChartsTest.csproj
+++ b/TestApplication/LiveChartsTest.csproj
@@ -55,6 +55,8 @@
     <PackageReference Include="PropertyChanged.Fody" Version="4.1.0" />
     <PackageReference Include="ReactiveUI" Version="18.4.26" />
     <PackageReference Include="ReactiveUI.Fody" Version="18.4.26" />
+    <PackageReference Include="ScottPlot" Version="4.1.62" />
+    <PackageReference Include="ScottPlot.Avalonia" Version="4.1.62" />
     <PackageReference Include="Splat.Autofac" Version="14.6.8" />
   </ItemGroup>
   <ItemGroup>
@@ -72,6 +74,9 @@
 	  </Compile>
 	  <Compile Update="Views\DataCollectionView.axaml.cs">
 	    <DependentUpon>DataCollectionView.axaml</DependentUpon>
+	  </Compile>
+	  <Compile Update="Views\FpgaScottPlotChartView.axaml.cs">
+	    <DependentUpon>FpgaScottPlotChartView.axaml</DependentUpon>
 	  </Compile>
 	  <Compile Update="Views\FpgaChartView.axaml.cs">
 	    <DependentUpon>FpgaChartView.axaml</DependentUpon>
