--- a/TestApplication/LiveChartsTest.csproj
+++ b/TestApplication/LiveChartsTest.csproj
@@ -66,6 +66,15 @@
 	  <AvaloniaResource Include="**\*.xaml">
 		  <SubType>Designer</SubType>
 	  </AvaloniaResource>
+	  <Page Include="Styles\Dialogs.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </Page>
+	  <Page Include="Styles\SideBar.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </Page>
+	  <Page Include="Styles\Styles.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </Page>
 	  <Compile Update="Views\DataView.axaml.cs">
 	    <DependentUpon>DataView.axaml</DependentUpon>
 	  </Compile>
@@ -81,5 +90,16 @@
 	  <Compile Update="Views\FpgaChartView.axaml.cs">
 	    <DependentUpon>FpgaChartView.axaml</DependentUpon>
 	  </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="Styles\Dialogs.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </None>
+    <None Update="Styles\SideBar.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </None>
+    <None Update="Styles\Styles.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </None>
   </ItemGroup>
 </Project>
