--- a/FpgaScatterPlotTest/FpgaScatterPlotTest.csproj
+++ b/FpgaScatterPlotTest/FpgaScatterPlotTest.csproj
@@ -10,6 +10,14 @@
   <ItemGroup>
     <AvaloniaResource Include="Assets\**" />
     <None Remove=".gitignore" />
+    <None Remove="Styles\DropletScatterPlotStyles.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <AvaloniaResource Include="Styles\DropletScatterPlotStyles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </AvaloniaResource>
   </ItemGroup>
 
   <ItemGroup>
@@ -30,6 +38,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="CustomControls\DropletScatterPlot.cs">
+      <DependentUpon>%(Filename)</DependentUpon>
+    </Compile>
     <Compile Update="Views\MyUserControl.axaml.cs">
       <DependentUpon>MyUserControl.axaml</DependentUpon>
     </Compile>
